fix: align content to top in editor that have no label (#1927)

--- a/projects/editor/styles/editor.css
+++ b/projects/editor/styles/editor.css
@@ -24,15 +24,8 @@ tui-editor::after {
     transform: translateY(-0.25rem);
     inline-size: 95%;
     font-size: 0.9375rem;
-}
-
-[tuiEditorLabel]:not(:empty) {
-    margin: 1rem 1rem -0.625rem;
-    min-block-size: 1.625rem;
-}
-
-[tuiEditorLabel]:empty {
     margin-block-end: 1rem;
+    margin: 1rem 1rem -0.375rem;
 }
 
 [tuiEditorScrollbar] {
@@ -44,10 +37,10 @@ tui-editor::after {
 
 [tuiEditorPlaceholder] {
     position: absolute;
-    margin-block-start: 1.5625rem;
     color: var(--tui-text-secondary);
     letter-spacing: normal;
     text-transform: none;
+    margin-block-start: 0.1875rem;
 }
 
 tui-editor > tui-editor-socket {
